--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+{{$NEXT}}
+
+    Use Dist::Zilla::PluginBundle::Author::Celogeek v0.7
+
 0.2 - Template::Plugin::HTMLToJS (2012-06-08 23:00)
 ====
 
