--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    update meta
+
 0.3       2012-07-17 00:29:14 Europe/Paris
 
     Use Dist::Zilla::PluginBundle::Author::Celogeek v0.7
